tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.diagnostic
diagnostic error code=T0001 family=type message="type mismatch: expected i64, got bool" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari" bytes=75
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari" line=3 column=11 end_line=3 end_column=15 byte_start=51 byte_end=55 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-type-assignment.ari:3:11\n   |\n 3 |   value = true;\n   |           ^^^^"
